--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trancheready",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "engines": { "node": ">=18 <=22" },
@@ -13,11 +13,15 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
+    "date-fns": "^4.1.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "pino": "^9.4.0",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "zod": "^3.23.8"
   }
 }
