--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trancheready",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "type": "module",
   "engines": { "node": ">=18 <=22" },
@@ -11,6 +11,7 @@
     "lint": "node -e \"console.log('Add ESLint in Part 5 CI')\""
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
@@ -22,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
+    "tweetnacl": "^1.0.3",
     "zod": "^3.23.8"
   }
 }
