--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trancheready",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "type": "module",
   "engines": { "node": ">=18 <=22" },
@@ -23,6 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
+    "stripe": "^16.6.0",
+    "swagger-ui-express": "^5.0.1",
     "tweetnacl": "^1.0.3",
     "zod": "^3.23.8"
   }
