--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
-# Server
-PORT=10000
-APP_ORIGIN=http://localhost:10000
-
-# CORS (set your marketing site here later, or leave blank to allow same-origin only)
-MARKETING_ORIGIN=
-
-# Log level: trace | debug | info | warn | error | silent
-LOG_LEVEL=info
+# Payments (Stripe)
+STRIPE_SECRET_KEY=
+STRIPE_PRICE_ID_STARTER=
+STRIPE_PRICE_ID_TEAM=
